autogen/proc.la.y.output
Terminals unused in grammar

   PROC
   RIGHT_ASSIGN
   LEFT_ASSIGN
   ADD_ASSIGN
   SUB_ASSIGN
   MUL_ASSIGN
   DIV_ASSIGN
   MOD_ASSIGN
   AND_ASSIGN
   XOR_ASSIGN
   OR_ASSIGN
   AUTO
   DO
   FOR
   WHILE


State 58 conflicts: 1 shift/reduce


Grammar

    0 $accept: a_proc_la $end

    1 basic_var_type_specifier: INT
    2                         | LONG
    3                         | FLOAT
    4                         | DOUBLE
    5                         | NUMBER
    6                         | STRING
    7                         | RAW
    8                         | VAR

    9 combined_var_type_specifier: basic_var_type_specifier LIST
   10                            | basic_var_type_specifier MAP
   11                            | combined_var_type_specifier LIST
   12                            | combined_var_type_specifier MAP

   13 var_type_specifier: basic_var_type_specifier
   14                   | combined_var_type_specifier

   15 type_list_declaration: type_list_declaration ',' var_type_specifier
   16                      | var_type_specifier

   17 var_declaration: IDENTIFIER ':' var_type_specifier

   18 numeric: N_CONSTANT
   19        | I_CONSTANT
   20        | F_CONSTANT

   21 string: STRING_LITERAL

   22 constant: numeric
   23         | string

   24 list_expression: '[' list_item_list ']'
   25                | '[' error ']'
   26                | '[' ']'
   27                | LIST

   28 list_item_list: expression
   29               | list_item_list ',' expression

   30 map_expression: '{' map_item_list '}'
   31               | '{' error '}'
   32               | MAP

   33 map_item_list: expression ':' expression
   34              | map_item_list ',' expression ':' expression

   35 tuple_expression: '(' tuple_item_list ')'
   36                 | '(' error ')'
   37                 | '(' ')'

   38 tuple_item_list: expression
   39                | var_declaration
   40                | tuple_item_list ',' expression
   41                | tuple_item_list ',' var_declaration

   42 container_access_expression: IDENTIFIER
   43                            | container_access_expression '[' expression ']'
   44                            | container_access_expression '{' expression '}'

   45 container_expression: constant
   46                     | list_expression
   47                     | map_expression
   48                     | tuple_expression
   49                     | container_access_expression

   50 postfix_expression: container_expression
   51                   | postfix_expression INC_OP
   52                   | postfix_expression DEC_OP

   53 unary_expression: postfix_expression
   54                 | INC_OP unary_expression
   55                 | DEC_OP unary_expression
   56                 | unary_operator unary_expression

   57 unary_operator: '+'
   58               | '-'
   59               | '~'
   60               | '!'

   61 multiplicative_expression: unary_expression
   62                          | multiplicative_expression '*' unary_expression
   63                          | multiplicative_expression '/' unary_expression
   64                          | multiplicative_expression '%' unary_expression

   65 additive_expression: multiplicative_expression
   66                    | additive_expression '+' multiplicative_expression
   67                    | additive_expression '-' multiplicative_expression

   68 shift_expression: additive_expression
   69                 | shift_expression LEFT_OP additive_expression
   70                 | shift_expression RIGHT_OP additive_expression

   71 relational_expression: shift_expression
   72                      | relational_expression '<' shift_expression
   73                      | relational_expression '>' shift_expression
   74                      | relational_expression LE_OP shift_expression
   75                      | relational_expression GE_OP shift_expression

   76 equality_expression: relational_expression
   77                    | equality_expression EQ_OP relational_expression
   78                    | equality_expression NE_OP relational_expression

   79 and_expression: equality_expression
   80               | and_expression '&' equality_expression

   81 exclusive_or_expression: and_expression
   82                        | exclusive_or_expression '^' and_expression

   83 inclusive_or_expression: exclusive_or_expression
   84                        | inclusive_or_expression '|' exclusive_or_expression

   85 logical_and_expression: inclusive_or_expression
   86                       | logical_and_expression AND_OP inclusive_or_expression

   87 logical_or_expression: logical_and_expression
   88                      | logical_or_expression OR_OP logical_and_expression

   89 conditional_expression: logical_or_expression
   90                       | logical_or_expression '?' expression ':' conditional_expression

   91 assignment_expression: IDENTIFIER
   92                      | var_declaration

   93 expression: conditional_expression
   94           | expression APPLY_TO assignment_expression
   95           | expression la_statement
   96           | expression IS var_type_specifier

   97 expression_statement: expression ';'
   98                     | expression APPLY_TO OUT ';'

   99 la_statement: pipe_op DOMAIN_NAME
  100             | pipe_op la_body_declaration
  101             | pipe_op OUT
  102             | pipe_op assignment_expression

  103 pipe_op: PIPE_1_TO_1
  104        | PIPE_REDUCE
  105        | PIPE_EXPAND
  106        | PIPE_INJECT

  107 statement: ';'
  108          | labeled_statement
  109          | block_statement
  110          | expression_statement
  111          | selection_statement
  112          | iteration_statement
  113          | jump_statement
  114          | SYNC IDENTIFIER ';'
  115          | error ';'

  116 labeled_statement: IDENTIFIER ':' statement

  117 case_statement: CASE expression ':' statement
  118               | CASE expression ':' case_statement
  119               | DEFAULT ':' case_statement
  120               | DEFAULT ':' statement

  121 cases_block_statement: cases_block_statement case_statement
  122                      | case_statement

  123 block_statement: '{' '}'
  124                | '{' block_item_list '}'

  125 block_item_list: block_item
  126                | block_item_list block_item

  127 block_item: statement

  128 selection_statement: IF '(' expression ')' statement
  129                    | IF '(' error ')' statement
  130                    | IF '(' expression ')' statement ELSE statement
  131                    | IF '(' error ')' statement ELSE statement
  132                    | SWITCH expression '{' cases_block_statement '}'
  133                    | SWITCH error '{' cases_block_statement '}'

  134 iteration_statement: LOOP statement
  135                    | EACH '(' expression ')' statement

  136 jump_statement: GOTO IDENTIFIER ';'
  137               | CONTINUE ';'
  138               | BREAK ';'

  139 la_input_declaration: tuple_expression

  140 la_output_declaration: '(' type_list_declaration ')'
  141                      | '(' error ')'
  142                      | '(' ')'

  143 la_body_declaration: la_input_declaration block_statement la_output_declaration
  144                    | la_input_declaration block_statement
  145                    | block_statement la_output_declaration
  146                    | block_statement

  147 la_declaration: DECLARE IDENTIFIER ':' LA la_body_declaration ';'

  148 la_alias: DOMAIN_NAME APPLY_TO IDENTIFIER ':' LA ';'

  149 external_declaration: la_alias
  150                     | la_declaration

  151 external_declaration_list: external_declaration_list external_declaration
  152                          | external_declaration

  153 package_declare: PACKAGE_NAME

  154 a_proc_la: package_declare external_declaration_list
  155          | external_declaration_list


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'%' (37) 64
'&' (38) 80
'(' (40) 35 36 37 128 129 130 131 135 140 141 142
')' (41) 35 36 37 128 129 130 131 135 140 141 142
'*' (42) 62
'+' (43) 57 66
',' (44) 15 29 34 40 41
'-' (45) 58 67
'/' (47) 63
':' (58) 17 33 34 90 116 117 118 119 120 147 148
';' (59) 97 98 107 114 115 136 137 138 147 148
'<' (60) 72
'>' (62) 73
'?' (63) 90
'[' (91) 24 25 26 43
']' (93) 24 25 26 43
'^' (94) 82
'{' (123) 30 31 44 123 124 132 133
'|' (124) 84
'}' (125) 30 31 44 123 124 132 133
'~' (126) 59
error (256) 25 31 36 115 129 131 133 141
IDENTIFIER (258) 17 42 91 114 116 136 147 148
I_CONSTANT (259) 19
F_CONSTANT (260) 20
STRING_LITERAL (261) 21
N_CONSTANT (262) 18
INT (263) 1
LONG (264) 2
FLOAT (265) 3
DOUBLE (266) 4
NUMBER (267) 5
STRING (268) 6
RAW (269) 7
VAR (270) 8
PROC (271)
LA (272) 147 148
LIST (273) 9 11 27
MAP (274) 10 12 32
APPLY_TO (275) 94 98 148
PIPE_1_TO_1 (276) 103
PIPE_REDUCE (277) 104
PIPE_EXPAND (278) 105
PIPE_INJECT (279) 106
RIGHT_ASSIGN (280)
LEFT_ASSIGN (281)
ADD_ASSIGN (282)
SUB_ASSIGN (283)
MUL_ASSIGN (284)
DIV_ASSIGN (285)
MOD_ASSIGN (286)
AND_ASSIGN (287)
XOR_ASSIGN (288)
OR_ASSIGN (289)
RIGHT_OP (290) 70
LEFT_OP (291) 69
INC_OP (292) 51 54
DEC_OP (293) 52 55
AND_OP (294) 86
OR_OP (295) 88
LE_OP (296) 74
GE_OP (297) 75
EQ_OP (298) 77
NE_OP (299) 78
AUTO (300)
BREAK (301) 138
CASE (302) 117 118
CONTINUE (303) 137
DEFAULT (304) 119 120
DO (305)
ELSE (306) 130 131
FOR (307)
GOTO (308) 136
IF (309) 128 129 130 131
SWITCH (310) 132 133
WHILE (311)
LOOP (312) 134
EACH (313) 135
IS (314) 96
OUT (315) 98 101
DECLARE (316) 147
SYNC (317) 114
DOMAIN_NAME (318) 99 148
PACKAGE_NAME (319) 153


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
basic_var_type_specifier (88)
    on left: 1 2 3 4 5 6 7 8, on right: 9 10 13
combined_var_type_specifier (89)
    on left: 9 10 11 12, on right: 11 12 14
var_type_specifier (90)
    on left: 13 14, on right: 15 16 17 96
type_list_declaration (91)
    on left: 15 16, on right: 15 140
var_declaration (92)
    on left: 17, on right: 39 41 92
numeric (93)
    on left: 18 19 20, on right: 22
string (94)
    on left: 21, on right: 23
constant (95)
    on left: 22 23, on right: 45
list_expression (96)
    on left: 24 25 26 27, on right: 46
list_item_list (97)
    on left: 28 29, on right: 24 29
map_expression (98)
    on left: 30 31 32, on right: 47
map_item_list (99)
    on left: 33 34, on right: 30 34
tuple_expression (100)
    on left: 35 36 37, on right: 48 139
tuple_item_list (101)
    on left: 38 39 40 41, on right: 35 40 41
container_access_expression (102)
    on left: 42 43 44, on right: 43 44 49
container_expression (103)
    on left: 45 46 47 48 49, on right: 50
postfix_expression (104)
    on left: 50 51 52, on right: 51 52 53
unary_expression (105)
    on left: 53 54 55 56, on right: 54 55 56 61 62 63 64
unary_operator (106)
    on left: 57 58 59 60, on right: 56
multiplicative_expression (107)
    on left: 61 62 63 64, on right: 62 63 64 65 66 67
additive_expression (108)
    on left: 65 66 67, on right: 66 67 68 69 70
shift_expression (109)
    on left: 68 69 70, on right: 69 70 71 72 73 74 75
relational_expression (110)
    on left: 71 72 73 74 75, on right: 72 73 74 75 76 77 78
equality_expression (111)
    on left: 76 77 78, on right: 77 78 79 80
and_expression (112)
    on left: 79 80, on right: 80 81 82
exclusive_or_expression (113)
    on left: 81 82, on right: 82 83 84
inclusive_or_expression (114)
    on left: 83 84, on right: 84 85 86
logical_and_expression (115)
    on left: 85 86, on right: 86 87 88
logical_or_expression (116)
    on left: 87 88, on right: 88 89 90
conditional_expression (117)
    on left: 89 90, on right: 90 93
assignment_expression (118)
    on left: 91 92, on right: 94 102
expression (119)
    on left: 93 94 95 96, on right: 28 29 33 34 38 40 43 44 90 94 95
    96 97 98 117 118 128 130 132 135
expression_statement (120)
    on left: 97 98, on right: 110
la_statement (121)
    on left: 99 100 101 102, on right: 95
pipe_op (122)
    on left: 103 104 105 106, on right: 99 100 101 102
statement (123)
    on left: 107 108 109 110 111 112 113 114 115, on right: 116 117
    120 127 128 129 130 131 134 135
labeled_statement (124)
    on left: 116, on right: 108
case_statement (125)
    on left: 117 118 119 120, on right: 118 119 121 122
cases_block_statement (126)
    on left: 121 122, on right: 121 132 133
block_statement (127)
    on left: 123 124, on right: 109 143 144 145 146
block_item_list (128)
    on left: 125 126, on right: 124 126
block_item (129)
    on left: 127, on right: 125 126
selection_statement (130)
    on left: 128 129 130 131 132 133, on right: 111
iteration_statement (131)
    on left: 134 135, on right: 112
jump_statement (132)
    on left: 136 137 138, on right: 113
la_input_declaration (133)
    on left: 139, on right: 143 144
la_output_declaration (134)
    on left: 140 141 142, on right: 143 145
la_body_declaration (135)
    on left: 143 144 145 146, on right: 100 147
la_declaration (136)
    on left: 147, on right: 150
la_alias (137)
    on left: 148, on right: 149
external_declaration (138)
    on left: 149 150, on right: 151 152
external_declaration_list (139)
    on left: 151 152, on right: 151 154 155
package_declare (140)
    on left: 153, on right: 154
a_proc_la (141)
    on left: 154 155, on right: 0


State 0

    0 $accept: . a_proc_la $end

    DECLARE       shift, and go to state 1
    DOMAIN_NAME   shift, and go to state 2
    PACKAGE_NAME  shift, and go to state 3

    la_declaration             go to state 4
    la_alias                   go to state 5
    external_declaration       go to state 6
    external_declaration_list  go to state 7
    package_declare            go to state 8
    a_proc_la                  go to state 9


State 1

  147 la_declaration: DECLARE . IDENTIFIER ':' LA la_body_declaration ';'

    IDENTIFIER  shift, and go to state 10


State 2

  148 la_alias: DOMAIN_NAME . APPLY_TO IDENTIFIER ':' LA ';'

    APPLY_TO  shift, and go to state 11


State 3

  153 package_declare: PACKAGE_NAME .

    $default  reduce using rule 153 (package_declare)


State 4

  150 external_declaration: la_declaration .

    $default  reduce using rule 150 (external_declaration)


State 5

  149 external_declaration: la_alias .

    $default  reduce using rule 149 (external_declaration)


State 6

  152 external_declaration_list: external_declaration .

    $default  reduce using rule 152 (external_declaration_list)


State 7

  151 external_declaration_list: external_declaration_list . external_declaration
  155 a_proc_la: external_declaration_list .

    DECLARE      shift, and go to state 1
    DOMAIN_NAME  shift, and go to state 2

    $default  reduce using rule 155 (a_proc_la)

    la_declaration        go to state 4
    la_alias              go to state 5
    external_declaration  go to state 12


State 8

  154 a_proc_la: package_declare . external_declaration_list

    DECLARE      shift, and go to state 1
    DOMAIN_NAME  shift, and go to state 2

    la_declaration             go to state 4
    la_alias                   go to state 5
    external_declaration       go to state 6
    external_declaration_list  go to state 13


State 9

    0 $accept: a_proc_la . $end

    $end  shift, and go to state 14


State 10

  147 la_declaration: DECLARE IDENTIFIER . ':' LA la_body_declaration ';'

    ':'  shift, and go to state 15


State 11

  148 la_alias: DOMAIN_NAME APPLY_TO . IDENTIFIER ':' LA ';'

    IDENTIFIER  shift, and go to state 16


State 12

  151 external_declaration_list: external_declaration_list external_declaration .

    $default  reduce using rule 151 (external_declaration_list)


State 13

  151 external_declaration_list: external_declaration_list . external_declaration
  154 a_proc_la: package_declare external_declaration_list .

    DECLARE      shift, and go to state 1
    DOMAIN_NAME  shift, and go to state 2

    $default  reduce using rule 154 (a_proc_la)

    la_declaration        go to state 4
    la_alias              go to state 5
    external_declaration  go to state 12


State 14

    0 $accept: a_proc_la $end .

    $default  accept


State 15

  147 la_declaration: DECLARE IDENTIFIER ':' . LA la_body_declaration ';'

    LA  shift, and go to state 17


State 16

  148 la_alias: DOMAIN_NAME APPLY_TO IDENTIFIER . ':' LA ';'

    ':'  shift, and go to state 18


State 17

  147 la_declaration: DECLARE IDENTIFIER ':' LA . la_body_declaration ';'

    '{'  shift, and go to state 19
    '('  shift, and go to state 20

    tuple_expression      go to state 21
    block_statement       go to state 22
    la_input_declaration  go to state 23
    la_body_declaration   go to state 24


State 18

  148 la_alias: DOMAIN_NAME APPLY_TO IDENTIFIER ':' . LA ';'

    LA  shift, and go to state 25


State 19

  123 block_statement: '{' . '}'
  124                | '{' . block_item_list '}'

    error           shift, and go to state 26
    IDENTIFIER      shift, and go to state 27
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    BREAK           shift, and go to state 36
    CONTINUE        shift, and go to state 37
    GOTO            shift, and go to state 38
    IF              shift, and go to state 39
    SWITCH          shift, and go to state 40
    LOOP            shift, and go to state 41
    EACH            shift, and go to state 42
    SYNC            shift, and go to state 43
    '{'             shift, and go to state 44
    '['             shift, and go to state 45
    '}'             shift, and go to state 46
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50
    ';'             shift, and go to state 51

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 74
    expression_statement         go to state 75
    statement                    go to state 76
    labeled_statement            go to state 77
    block_statement              go to state 78
    block_item_list              go to state 79
    block_item                   go to state 80
    selection_statement          go to state 81
    iteration_statement          go to state 82
    jump_statement               go to state 83


State 20

   35 tuple_expression: '(' . tuple_item_list ')'
   36                 | '(' . error ')'
   37                 | '(' . ')'

    error           shift, and go to state 84
    IDENTIFIER      shift, and go to state 85
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    ')'             shift, and go to state 87
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50

    var_declaration              go to state 88
    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    tuple_item_list              go to state 89
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 90


State 21

  139 la_input_declaration: tuple_expression .

    $default  reduce using rule 139 (la_input_declaration)


State 22

  145 la_body_declaration: block_statement . la_output_declaration
  146                    | block_statement .

    '('  shift, and go to state 91

    $default  reduce using rule 146 (la_body_declaration)

    la_output_declaration  go to state 92


State 23

  143 la_body_declaration: la_input_declaration . block_statement la_output_declaration
  144                    | la_input_declaration . block_statement

    '{'  shift, and go to state 19

    block_statement  go to state 93


State 24

  147 la_declaration: DECLARE IDENTIFIER ':' LA la_body_declaration . ';'

    ';'  shift, and go to state 94


State 25

  148 la_alias: DOMAIN_NAME APPLY_TO IDENTIFIER ':' LA . ';'

    ';'  shift, and go to state 95


State 26

  115 statement: error . ';'

    ';'  shift, and go to state 96


State 27

   42 container_access_expression: IDENTIFIER .
  116 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 97

    $default  reduce using rule 42 (container_access_expression)


State 28

   19 numeric: I_CONSTANT .

    $default  reduce using rule 19 (numeric)


State 29

   20 numeric: F_CONSTANT .

    $default  reduce using rule 20 (numeric)


State 30

   21 string: STRING_LITERAL .

    $default  reduce using rule 21 (string)


State 31

   18 numeric: N_CONSTANT .

    $default  reduce using rule 18 (numeric)


State 32

   27 list_expression: LIST .

    $default  reduce using rule 27 (list_expression)


State 33

   32 map_expression: MAP .

    $default  reduce using rule 32 (map_expression)


State 34

   54 unary_expression: INC_OP . unary_expression

    IDENTIFIER      shift, and go to state 98
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 99
    unary_operator               go to state 62


State 35

   55 unary_expression: DEC_OP . unary_expression

    IDENTIFIER      shift, and go to state 98
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 100
    unary_operator               go to state 62


State 36

  138 jump_statement: BREAK . ';'

    ';'  shift, and go to state 101


State 37

  137 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 102


State 38

  136 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 103


State 39

  128 selection_statement: IF . '(' expression ')' statement
  129                    | IF . '(' error ')' statement
  130                    | IF . '(' expression ')' statement ELSE statement
  131                    | IF . '(' error ')' statement ELSE statement

    '('  shift, and go to state 104


State 40

  132 selection_statement: SWITCH . expression '{' cases_block_statement '}'
  133                    | SWITCH . error '{' cases_block_statement '}'

    error           shift, and go to state 105
    IDENTIFIER      shift, and go to state 98
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 106


State 41

  134 iteration_statement: LOOP . statement

    error           shift, and go to state 26
    IDENTIFIER      shift, and go to state 27
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    BREAK           shift, and go to state 36
    CONTINUE        shift, and go to state 37
    GOTO            shift, and go to state 38
    IF              shift, and go to state 39
    SWITCH          shift, and go to state 40
    LOOP            shift, and go to state 41
    EACH            shift, and go to state 42
    SYNC            shift, and go to state 43
    '{'             shift, and go to state 44
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50
    ';'             shift, and go to state 51

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 74
    expression_statement         go to state 75
    statement                    go to state 107
    labeled_statement            go to state 77
    block_statement              go to state 78
    selection_statement          go to state 81
    iteration_statement          go to state 82
    jump_statement               go to state 83


State 42

  135 iteration_statement: EACH . '(' expression ')' statement

    '('  shift, and go to state 108


State 43

  114 statement: SYNC . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 109


State 44

   30 map_expression: '{' . map_item_list '}'
   31               | '{' . error '}'
  123 block_statement: '{' . '}'
  124                | '{' . block_item_list '}'

    error           shift, and go to state 110
    IDENTIFIER      shift, and go to state 27
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    BREAK           shift, and go to state 36
    CONTINUE        shift, and go to state 37
    GOTO            shift, and go to state 38
    IF              shift, and go to state 39
    SWITCH          shift, and go to state 40
    LOOP            shift, and go to state 41
    EACH            shift, and go to state 42
    SYNC            shift, and go to state 43
    '{'             shift, and go to state 44
    '['             shift, and go to state 45
    '}'             shift, and go to state 46
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50
    ';'             shift, and go to state 51

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    map_expression               go to state 56
    map_item_list                go to state 111
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 112
    expression_statement         go to state 75
    statement                    go to state 76
    labeled_statement            go to state 77
    block_statement              go to state 78
    block_item_list              go to state 79
    block_item                   go to state 80
    selection_statement          go to state 81
    iteration_statement          go to state 82
    jump_statement               go to state 83


State 45

   24 list_expression: '[' . list_item_list ']'
   25                | '[' . error ']'
   26                | '[' . ']'

    error           shift, and go to state 113
    IDENTIFIER      shift, and go to state 98
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    '['             shift, and go to state 45
    ']'             shift, and go to state 114
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50

    numeric                      go to state 52
    string                       go to state 53
    constant                     go to state 54
    list_expression              go to state 55
    list_item_list               go to state 115
    map_expression               go to state 56
    tuple_expression             go to state 57
    container_access_expression  go to state 58
    container_expression         go to state 59
    postfix_expression           go to state 60
    unary_expression             go to state 61
    unary_operator               go to state 62
    multiplicative_expression    go to state 63
    additive_expression          go to state 64
    shift_expression             go to state 65
    relational_expression        go to state 66
    equality_expression          go to state 67
    and_expression               go to state 68
    exclusive_or_expression      go to state 69
    inclusive_or_expression      go to state 70
    logical_and_expression       go to state 71
    logical_or_expression        go to state 72
    conditional_expression       go to state 73
    expression                   go to state 116


State 46

  123 block_statement: '{' '}' .

    $default  reduce using rule 123 (block_statement)


State 47

   57 unary_operator: '+' .

    $default  reduce using rule 57 (unary_operator)


State 48

   58 unary_operator: '-' .

    $default  reduce using rule 58 (unary_operator)


State 49

   59 unary_operator: '~' .

    $default  reduce using rule 59 (unary_operator)


State 50

   60 unary_operator: '!' .

    $default  reduce using rule 60 (unary_operator)


State 51

  107 statement: ';' .

    $default  reduce using rule 107 (statement)


State 52

   22 constant: numeric .

    $default  reduce using rule 22 (constant)


State 53

   23 constant: string .

    $default  reduce using rule 23 (constant)


State 54

   45 container_expression: constant .

    $default  reduce using rule 45 (container_expression)


State 55

   46 container_expression: list_expression .

    $default  reduce using rule 46 (container_expression)


State 56

   47 container_expression: map_expression .

    $default  reduce using rule 47 (container_expression)


State 57

   48 container_expression: tuple_expression .

    $default  reduce using rule 48 (container_expression)


State 58

   43 container_access_expression: container_access_expression . '[' expression ']'
   44                            | container_access_expression . '{' expression '}'
   49 container_expression: container_access_expression .

    '{'  shift, and go to state 117
    '['  shift, and go to state 118

    '{'       [reduce using rule 49 (container_expression)]
    $default  reduce using rule 49 (container_expression)


State 59

   50 postfix_expression: container_expression .

    $default  reduce using rule 50 (postfix_expression)


State 60

   51 postfix_expression: postfix_expression . INC_OP
   52                   | postfix_expression . DEC_OP
   53 unary_expression: postfix_expression .

    INC_OP  shift, and go to state 119
    DEC_OP  shift, and go to state 120

    $default  reduce using rule 53 (unary_expression)


State 61

   61 multiplicative_expression: unary_expression .

    $default  reduce using rule 61 (multiplicative_expression)


State 62

   56 unary_expression: unary_operator . unary_expression

    IDENTIFIER      shift, and go to state 98
    I_CONSTANT      shift, and go to state 28
    F_CONSTANT      shift, and go to state 29
    STRING_LITERAL  shift, and go to state 30
    N_CONSTANT      shift, and go to state 31
    LIST            shift, and go to state 32
    MAP             shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    '{'             shift, and go to state 86
    '['             shift, and go to state 45
    '('             shift, and go to state 20
    '+'             shift, and go to state 47
    '-'             shift, and go to state 48
    '~'             shift, and go to state 49
    '!'             shift, and go to state 50
